@@ -24,11 +24,11 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2016112703;
+$plugin->version   = 2017100301;
 $plugin->requires  = 2016052300;//moodle 3.1.0
 $plugin->component = 'atto_poodll';  // Full name of the plugin (used for diagnostics).
 $plugin->maturity  = MATURITY_STABLE;
 // Human readable version information
-$plugin->release   = '3.0.2 (Build 2016112701)';
+$plugin->release   = '3.0.3 (Build 2017100301)';
 $plugin->dependencies = array('filter_poodll' => 2016081401);
 
